enabled click to toggle temperature and added initial styles.

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -21,15 +21,22 @@
         <![endif]-->
 
     <main>
-        <div id="loading">Loading...</div>
-        <div class="city"></div>
-        <div class="temp"></div>
-        <div class="desc"></div>
-
-        <footer class="mainFooter">by
-            <a href="http://www.gledsleymuller.com" target="_blank">Gledsley Müller</a>
-        </footer>
+        <div class="wrapper">
+            <div class="weatherWidget">
+                <div id="loading">Loading...</div>
+                <div class="city"></div>
+                <div class="temp"></div>
+                <div class="desc"></div>
+            </div>
+        </div>
     </main>
+    <footer class="mainFooter">
+        <div class="wrapper">
+            <p>by
+                <a href="http://www.gledsleymuller.com" target="_blank">Gledsley Müller</a>
+            </p>
+        </div>
+    </footer>
     <script src="../js/main-vanilla.js"></script>
 
 </body>
