--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jura:600">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -24,17 +25,18 @@
         <div class="wrapper">
             <div class="weatherWidget">
                 <div id="loading">Loading...</div>
-                <div class="city"></div>
+                <div class="place">
+                    <span class="city"></span><span class="country"></span>
+                </div>
                 <div class="temp"></div>
                 <div class="desc"></div>
+                <img class="icon" src="" alt="" />
             </div>
         </div>
     </main>
     <footer class="mainFooter">
         <div class="wrapper">
-            <p>by
-                <a href="http://www.gledsleymuller.com" target="_blank">Gledsley Müller</a>
-            </p>
+            <p>Built by <a href="http://www.gledsleymuller.com" target="_blank">Gledsley Müller</a></p>
         </div>
     </footer>
     <script src="../js/main-vanilla.js"></script>
